--- a/CryptoParser/View/Custom Cell/CurrencyCustomTableViewCell.xib
+++ b/CryptoParser/View/Custom Cell/CurrencyCustomTableViewCell.xib
@@ -9,60 +9,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customMessageCell" rowHeight="82" id="4Zq-nf-AnB" customClass="CurrencyCustomTableViewCell" customModule="CryptoParser" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="currencyCell" id="4Zq-nf-AnB" customClass="CurrencyCustomTableViewCell" customModule="CryptoParser" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4Zq-nf-AnB" id="ZPU-E3-58V">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yng-Yj-qkM">
-                        <rect key="frame" x="0.0" y="10" width="53" height="53"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="53" id="3Xf-vo-1r6"/>
-                            <constraint firstAttribute="width" constant="53" id="CiC-Jl-LXH"/>
-                        </constraints>
-                    </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2VX-kP-wZn">
-                        <rect key="frame" x="59" y="10" width="251" height="53"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZVK-oA-fpw">
-                                <rect key="frame" x="9" y="22" width="244" height="9"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" red="1" green="0.99997437" blue="0.99999129769999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" red="0.1819814891" green="0.69426733259999995" blue="0.53024792669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="ZVK-oA-fpw" firstAttribute="leading" secondItem="2VX-kP-wZn" secondAttribute="leading" constant="9" id="LBr-Kz-yFN"/>
-                            <constraint firstAttribute="bottom" secondItem="ZVK-oA-fpw" secondAttribute="bottom" constant="22" id="YgK-6T-QMF"/>
-                            <constraint firstItem="ZVK-oA-fpw" firstAttribute="centerY" secondItem="2VX-kP-wZn" secondAttribute="centerY" id="a9e-BH-yGT"/>
-                            <constraint firstAttribute="trailing" secondItem="ZVK-oA-fpw" secondAttribute="trailing" constant="-2" id="yiW-b2-Drd"/>
-                        </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="20"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZVK-oA-fpw">
+                        <rect key="frame" x="10" y="23.5" width="64" height="34"/>
+                        <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="25"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xbf-Cv-ZVF">
+                        <rect key="frame" x="251.5" y="23.5" width="58.5" height="34"/>
+                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="25"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Yng-Yj-qkM" firstAttribute="top" secondItem="ZPU-E3-58V" secondAttribute="top" constant="10" id="3AN-n6-ETJ"/>
-                    <constraint firstAttribute="bottom" secondItem="2VX-kP-wZn" secondAttribute="bottom" constant="18" id="Ano-JA-6bK"/>
-                    <constraint firstItem="2VX-kP-wZn" firstAttribute="top" secondItem="ZPU-E3-58V" secondAttribute="top" constant="10" id="FCp-hN-bQw"/>
-                    <constraint firstItem="2VX-kP-wZn" firstAttribute="leading" secondItem="Yng-Yj-qkM" secondAttribute="trailing" constant="6" id="PZF-Qz-KB1"/>
-                    <constraint firstAttribute="trailing" secondItem="2VX-kP-wZn" secondAttribute="trailing" constant="10" id="Qpq-SV-XeR"/>
-                    <constraint firstItem="Yng-Yj-qkM" firstAttribute="leading" secondItem="ZPU-E3-58V" secondAttribute="leading" id="vPa-uu-aCf"/>
+                    <constraint firstItem="ZVK-oA-fpw" firstAttribute="top" secondItem="ZPU-E3-58V" secondAttribute="top" constant="23.5" id="JZr-xm-EXT"/>
+                    <constraint firstAttribute="bottom" secondItem="Xbf-Cv-ZVF" secondAttribute="bottom" constant="23.5" id="MkG-xI-hRV"/>
+                    <constraint firstItem="ZVK-oA-fpw" firstAttribute="leading" secondItem="ZPU-E3-58V" secondAttribute="leading" constant="10" id="O2x-5W-MW8"/>
+                    <constraint firstItem="Xbf-Cv-ZVF" firstAttribute="top" secondItem="ZPU-E3-58V" secondAttribute="top" constant="23.5" id="Osn-an-Ot4"/>
+                    <constraint firstAttribute="bottom" secondItem="ZVK-oA-fpw" secondAttribute="bottom" constant="23.5" id="njI-ar-t1R"/>
+                    <constraint firstAttribute="trailing" secondItem="Xbf-Cv-ZVF" secondAttribute="trailing" constant="10" id="udm-Fh-Nhy"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="avatarImageView" destination="Yng-Yj-qkM" id="RtI-7s-Ysc"/>
-                <outlet property="logoImage" destination="Yng-Yj-qkM" id="ro0-JO-VYN"/>
-                <outlet property="messageBackground" destination="2VX-kP-wZn" id="Nz0-Ze-phq"/>
-                <outlet property="messageBody" destination="ZVK-oA-fpw" id="xWB-Ex-KOT"/>
                 <outlet property="nameLabel" destination="ZVK-oA-fpw" id="U7t-w8-Q2g"/>
+                <outlet property="priceLabel" destination="Xbf-Cv-ZVF" id="I0H-zA-KFo"/>
             </connections>
             <point key="canvasLocation" x="437.68115942028987" y="381.36160714285711"/>
         </tableViewCell>
