--- a/CryptoParser/View/Custom Cell/CurrencyCustomTableViewCell.xib
+++ b/CryptoParser/View/Custom Cell/CurrencyCustomTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="currencyCell" id="4Zq-nf-AnB" customClass="CurrencyCustomTableViewCell" customModule="CryptoParser" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="currencyCell" rowHeight="100" id="4Zq-nf-AnB" customClass="CurrencyCustomTableViewCell" customModule="CryptoParser" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4Zq-nf-AnB" id="ZPU-E3-58V">
@@ -17,28 +17,36 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZVK-oA-fpw">
-                        <rect key="frame" x="10" y="23.5" width="64" height="34"/>
-                        <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="25"/>
+                        <rect key="frame" x="30" y="23.5" width="77" height="34"/>
+                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="30"/>
                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xbf-Cv-ZVF">
-                        <rect key="frame" x="251.5" y="23.5" width="58.5" height="34"/>
-                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="25"/>
+                        <rect key="frame" x="229" y="20" width="71" height="41"/>
+                        <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="30"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W59-km-KKR">
+                        <rect key="frame" x="227" y="40" width="73" height="31"/>
+                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="22"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="W59-km-KKR" secondAttribute="trailing" constant="20" id="111-49-JK7"/>
+                    <constraint firstAttribute="bottom" secondItem="W59-km-KKR" secondAttribute="bottom" constant="10" id="4yE-iV-fNq"/>
                     <constraint firstItem="ZVK-oA-fpw" firstAttribute="top" secondItem="ZPU-E3-58V" secondAttribute="top" constant="23.5" id="JZr-xm-EXT"/>
-                    <constraint firstAttribute="bottom" secondItem="Xbf-Cv-ZVF" secondAttribute="bottom" constant="23.5" id="MkG-xI-hRV"/>
-                    <constraint firstItem="ZVK-oA-fpw" firstAttribute="leading" secondItem="ZPU-E3-58V" secondAttribute="leading" constant="10" id="O2x-5W-MW8"/>
-                    <constraint firstItem="Xbf-Cv-ZVF" firstAttribute="top" secondItem="ZPU-E3-58V" secondAttribute="top" constant="23.5" id="Osn-an-Ot4"/>
+                    <constraint firstItem="ZVK-oA-fpw" firstAttribute="leading" secondItem="ZPU-E3-58V" secondAttribute="leading" constant="30" id="O2x-5W-MW8"/>
                     <constraint firstAttribute="bottom" secondItem="ZVK-oA-fpw" secondAttribute="bottom" constant="23.5" id="njI-ar-t1R"/>
-                    <constraint firstAttribute="trailing" secondItem="Xbf-Cv-ZVF" secondAttribute="trailing" constant="10" id="udm-Fh-Nhy"/>
+                    <constraint firstAttribute="trailing" secondItem="Xbf-Cv-ZVF" secondAttribute="trailing" constant="20" id="udm-Fh-Nhy"/>
+                    <constraint firstItem="Xbf-Cv-ZVF" firstAttribute="centerY" secondItem="ZPU-E3-58V" secondAttribute="centerY" id="xdI-ZA-xJg"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="changeLabel" destination="W59-km-KKR" id="5Nn-LD-GPz"/>
                 <outlet property="nameLabel" destination="ZVK-oA-fpw" id="U7t-w8-Q2g"/>
                 <outlet property="priceLabel" destination="Xbf-Cv-ZVF" id="I0H-zA-KFo"/>
             </connections>
