Favorite currency added

--- a/CryptoParser/View/Base.lproj/Main.storyboard
+++ b/CryptoParser/View/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Byv-Zt-Mxb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1384" y="260"/>
+            <point key="canvasLocation" x="1213" y="260"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="eUB-mK-ZFQ">
@@ -101,7 +101,8 @@
                     <navigationItem key="navigationItem" id="7gd-Jc-QSV">
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="2Vf-sp-lUM">
                             <connections>
-                                <action selector="donePressed:" destination="Plp-DH-ERp" id="fMT-Yf-pof"/>
+                                <action selector="donePressed:" destination="Plp-DH-ERp" id="zlj-xy-ckZ"/>
+                                <segue destination="EgF-1d-Vmg" kind="unwind" unwindAction="myUnwindActionWithUnwindSegue:" id="Lph-cD-Mh3"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -110,8 +111,9 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Udw-um-ulk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="EgF-1d-Vmg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="511.59420289855075" y="941.51785714285711"/>
+            <point key="canvasLocation" x="512" y="933"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9Je-rQ-S3p">
